<resources>
    <string name="app_name">Brar_Hesseini_Wang</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="title_activity_country_details_acitivity">CountryDetailsAcitivity</string>
    <string-array name="continents">
        <item>Africa</item>
        <item>Asia</item>
        <item>Oceania</item>
        <item>Europe</item>
        <item>Americas</item>
        <item>Oceania</item>
    </string-array>
    <string name="title_activity_country_details">CountryDetailsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="namePre">Name:\u0020 </string>
    <string name="capitalPre">Capital:\u0020</string>
    <string name="regionPre">Region:\u0020</string>
    <string name="populationPre">Population:\u0020</string>
    <string name="bordersPre">Borders:\u0020</string>
    <string name="areaPre">Area:\u0020</string>
</resources>
