<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/flag"

        android:layout_width="396dp"
        android:layout_height="151dp"

        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namePre"/>

    <TextView
        android:id="@+id/capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitalPre"/>

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regionPre"/>

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populationPre"/>

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/areaPre"/>

    <TextView
        android:id="@+id/borders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bordersPre"/>


</LinearLayout>